test/src/e2e_vm_tests/test_programs/should_fail/conditional_compilation/no_target/src/main.sw
script;

#[cfg(target)]
fn main() {
  ()
}
